--- a/testsuites/CMakeLists.txt
+++ b/testsuites/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.15)
 project(fastio_examples)
 find_package(Threceive)
-
+set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -s")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -s")
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
   # using Visual Studio C++
 add_definitions(/experimental:concepts)
@@ -11,9 +12,9 @@ if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 10)
 message(FATAL_ERROR "fast_io no longer supports GCC < 10 version because of incomplete C++ standard library support for concepts lite. Please build the master version of GCC from its official or mirror repo. Or use Visual Studio Preview")
 endif()
 
-add_definitions(-ffast-math -Wall -Wextra)
+add_definitions(-ffast-math -Wall -Wextra -s)
 elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-add_definitions(-Xclang -fconcepts-ts -ffast-math)
+add_definitions(-Xclang -fconcepts-ts -ffast-math -s)
 endif()
 
 set(CMAKE_CXX_STANDARD 20)
