--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -10,14 +10,16 @@ elseif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
 if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 10)
 message(FATAL_ERROR "fast_io no longer supports GCC < 10 version because of incomplete C++ standard library support for concepts lite. Please build the master version of GCC from its official or mirror repo. Or use Visual Studio Preview")
 endif()
-
-add_definitions(-s -ffast-math -Wall -Wextra)
+set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -s")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -s")
+add_definitions(-ffast-math -Wall -Wextra)
 elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-add_definitions(-Xclang -fconcepts-ts -ffast-math -s)
+set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -s")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -s")
+add_definitions(-Xclang -fconcepts-ts -ffast-math)
 endif()
 
 set(CMAKE_CXX_STANDARD 20)
-
 
 add_executable(compile "./0000.compile/fast_io.cc")
 add_executable(hw "./0001.helloworld/hw.cc")
