msvc support restarts

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -12,16 +12,18 @@ message(FATAL_ERROR "fast_io no longer supports GCC < 10 version because of inco
 endif()
 set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -s")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -s")
-add_definitions(-ffast-math -Wall -Wextra)
+add_definitions(-ffast-math -Wall -Wextra -maes -msse2 -msha)
 elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
 set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -s")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -s")
-add_definitions(-Xclang -fconcepts-ts -ffast-math)
+add_definitions(-Xclang -fconcepts-ts -ffast-math -maes -msse2 -msha)
 endif()
 
 set(CMAKE_CXX_STANDARD 20)
 
 
 add_executable(output_10M_size_t "./0000.10m_size_t/output_10M_size_t.cc")
-
+if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+add_executable(tenm_size_t "./0000.10m_size_t/with_crypto/tenm_size_t.cc")
+endif()
 add_executable(output_10M_double "./0001.10m_double/output_10M_double.cc")
