--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,23 +2,25 @@ cmake_minimum_required(VERSION 3.15)
 
 project(fast_io)
 
+if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
+  # using Visual Studio C++
+add_definitions(/experimental:concepts)
+#if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Intel")
+elseif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -s")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -s")
+add_definitions(-ffast-math -Wall -Wextra)
+elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -s")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -s")
+add_definitions(-Xclang -fconcepts-ts -ffast-math)
+endif()
+
 set(CMAKE_CXX_STANDARD 20)
+include_directories(include)
+file(GLOB SOURCES src/*.cc)
+add_library(fast_io SHARED src/fast_io_c_interface.cc)
+set_target_properties(fast_io PROPERTIES OUTPUT_NAME "fast_io_c_interface")
 
-add_library(fast_io_c_interface SHARED
-    src/fast_io_c_interface.cc
-)
-
-target_include_directories(fast_io
-    PUBLIC 
-        ${PROJECT_SOURCE_DIR}/include
-)
-
-
-# Library
-# Note: may not work on windows
-install (TARGETS fast_io_c_interface
-    LIBRARY DESTINATION lib)
-
-# Header files
-install(DIRECTORY ${PROJECT_SOURCE_DIR}/include/ 
-    DESTINATION include)
+file(GLOB HEADERS include/*.h)
+install(FILES ${HEADERS} DESTINATION include/${PROJECT_NAME})
