--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.15)
 project(fast_io)
 
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
-  # using Visual Studio C++
+	# using Visual Studio C++
 add_definitions(/experimental:concepts)
 #if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Intel")
 elseif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
@@ -16,6 +16,7 @@ set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -s")
 add_definitions(-Xclang -fconcepts-ts -ffast-math)
 endif()
 
+
 set(CMAKE_CXX_STANDARD 20)
 include_directories(include)
 file(GLOB SOURCES src/*.cc)
@@ -23,4 +24,7 @@ add_library(fast_io SHARED src/fast_io_c_interface.cc)
 set_target_properties(fast_io PROPERTIES OUTPUT_NAME "fast_io_c_interface")
 
 file(GLOB HEADERS include/*.h)
+
+install(TARGETS fast_io
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
 install(FILES ${HEADERS} DESTINATION include/${PROJECT_NAME})
