--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ add_library(fast_io SHARED src/fast_io_c_interface.cc)
 add_library(fast_io_static STATIC src/fast_io_c_interface.cc)
 
 set_target_properties(fast_io PROPERTIES OUTPUT_NAME "fast_io_c_interface")
+set_target_properties(fast_io_static PROPERTIES OUTPUT_NAME "fast_io_c_interface")
 
 install(TARGETS fast_io
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
